// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Toaster Default 1`] = `
<div
  className="sc-brqgnP bQpIOa"
>
  <div
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <div
      className="sc-cJSrbW GZKcS"
    >
      <div
        className="sc-bwzfXH dMEGgX"
      >
        <div
          className="sc-ksYbfQ gmLutg"
        >
          <div
            className="sc-bwzfXH jwDFoo"
          >
            <span
              className="sc-ifAKCX dlUdxY"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI jSMqMr"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </span>
          </div>
          <div
            className="sc-bwzfXH hIRDBz"
          >
            <div
              className="sc-bwzfXH iQQUwN"
            >
              <p
                className="sc-bxivhb fYhFYx"
              >
                Thought provoking we must stand.
              </p>
              <p
                className="sc-bxivhb iBTcEE"
              >
                Game-changer problem-solvers; state of play invest, synergy uplift we must stand up ideate social intrapreneurship.
              </p>
            </div>
          </div>
          <div
            className="sc-bwzfXH gaLISJ"
          >
            <button
              className="sc-htoDjs TzVGU"
              color={undefined}
              disabled={undefined}
              icon={undefined}
              id={undefined}
              onClick={[Function]}
              title="close"
              type="button"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI MOBcS"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toaster With action button 1`] = `
<div
  className="sc-brqgnP bQpIOa"
>
  <div
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <div
      className="sc-cJSrbW GZKcS"
    >
      <div
        className="sc-bwzfXH dMEGgX"
      >
        <div
          className="sc-ksYbfQ hGcTIQ"
        >
          <div
            className="sc-bwzfXH jwDFoo"
          >
            <span
              className="sc-ifAKCX cBRJkj"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI jSMqMr"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </span>
          </div>
          <div
            className="sc-bwzfXH hIRDBz"
          >
            <div
              className="sc-bwzfXH iQQUwN"
            >
              <p
                className="sc-bxivhb fYhFYx"
              >
                Overcome injustice.
              </p>
              <p
                className="sc-bxivhb iBTcEE"
              >
                Global low-hanging fruit, collaborative consumption segmentation mobilize support. Problem-solvers cultivate, best practices, shared unit of.
              </p>
            </div>
            <div
              className="sc-bwzfXH iKXoij"
            >
              <button
                className="sc-htoDjs hqsvnm"
                color={undefined}
                disabled={undefined}
                icon={undefined}
                id={undefined}
                onClick={[Function]}
                title="Hello"
                type="button"
              >
                Hello
              </button>
            </div>
          </div>
          <div
            className="sc-bwzfXH gaLISJ"
          >
            <button
              className="sc-htoDjs TzVGU"
              color={undefined}
              disabled={undefined}
              icon={undefined}
              id={undefined}
              onClick={[Function]}
              title="close"
              type="button"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI MOBcS"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
